cmake_minimum_required(VERSION 3.22)

project(Figure)

add_executable (Figure Fig.cpp Triangle90.h Triangle90.cpp TriangleAC_ac.h TriangleAC_ac.cpp TriangleABC.h TriangleABC.cpp Triangle.h Triangle.cpp Romb.h Romb.cpp Quadrat.h Quadrat.cpp Quadrangle90.h Quadrangle90.cpp Quadrangle.h Quadrangle.cpp Parallellogram.h Parallellogram.cpp Figure.h Figure.cpp )